Target Java 8 like jqwik
jqwik still supports Java 8, so a module that raises the bar
to 11 shuts out part of its users. The few Java 9+ library
calls and the local type inference are replaced.