@@ -43,7 +43,7 @@ public class ArquillianPropertyHook implements AroundPropertyHook {
 
 	private PropertyExecutionResult fromContainer(TestResult remoteResult, PropertyLifecycleContext context) {
 		final String report = remoteResult.getDescription();
-		if (report != null && !report.isBlank()) {
+		if (report != null && !report.trim().isEmpty()) {
 			context.reporter().publishValue(REMOTE_REPORT_KEY, report);
 		}
 		return RemotePropertyExecutionResult.from(remoteResult);
